--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="right">right</string>
     <string name="crush_toast">Oh no, I\'m melting!</string>
     <string name="end_game_toast">It was a good life, get better for next time</string>
+    <string name="broom_toast">Champion :)</string>
 </resources>
