--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,17 @@
     <string name="right">right</string>
     <string name="crush_toast">Oh no, I\'m melting!</string>
     <string name="end_game_toast">It was a good life, get better for next time</string>
-    <string name="broom_toast">Champion :)</string>
+    <string name="cauldron_toast">Champion :)</string>
     <string name="score_title">000</string>
     <string name="player_title">Player</string>
+    <string name="name_edit">Name</string>
+    <string name="insert_name">Insert your name :</string>
+    <string name="submit">Submit</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="record_title">TOP RECORDS</string>
+    <string name="welcome">WELCOME</string>
+    <string name="main">Main</string>
+    <string name="start">Start</string>
+    <string name="top_records_button">Top records</string>
 </resources>
