--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="crush_toast">Oh no, I\'m melting!</string>
     <string name="end_game_toast">It was a good life, get better for next time</string>
     <string name="cauldron_toast">Champion :)</string>
+    <string name="Location_toast">Location permission is required to get the player location</string>
     <string name="score_title">000</string>
     <string name="player_title">Player</string>
     <string name="name_edit">Name</string>
